[gd_scene load_steps=24 format=2]

[ext_resource path="res://Resources/Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Resources/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Entities/Hitbox/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Properties/Status.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Hitbox/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Entities/Hitbox/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Entities/Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Entities/Bleach.gdshader" type="Shader" id=11]

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 11 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "BatFly",
"speed": 10.0
} ]

[sub_resource type="Animation" id=12]
resource_name = "Blink"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BatAnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BatAnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 4.12311

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.0
height = 4.0

[sub_resource type="CircleShape2D" id=9]
radius = 6.0

[sub_resource type="CircleShape2D" id=10]
radius = 5.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 4 )

[node name="Status" parent="." instance=ExtResource( 5 )]
max_health = 2

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="BatShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="BatAnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 11 )
frames = SubResource( 6 )
animation = "BatFly"
frame = 3
playing = true
offset = Vector2( 0, -12 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 16

[node name="CollisionHurtbox" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 8 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
visible = false
modulate = Color( 1, 0, 0, 1 )
collision_mask = 4

[node name="CollisionHitbox" parent="Hitbox" index="0"]
modulate = Color( 0.807843, 0.215686, 0.215686, 1 )
position = Vector2( 0, -15 )
shape = SubResource( 9 )
disabled = false

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 10 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[connection signal="no_health" from="Status" to="." method="_on_Status_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
[editable path="PlayerDetectionZone"]
